--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 maintenance = { status = "passively-maintained" }
 
 [dependencies]
-serde = { version = "1.0.214", features = ["derive"] }
+serde = { version = "^1.0", features = ["derive"] }
 swift-rs = "1.0.5"
 
 [build-dependencies]
